--- a/griffin-airline/src/main.scss
+++ b/griffin-airline/src/main.scss
@@ -1,8 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Lalezar&family=Noto+Nastaliq+Urdu:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Readex+Pro:wght@160..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zain:wght@200;300;400;700;800;900&display=swap');
 *{
     padding: 0%;
     margin: 0;
     box-sizing: border-box;
-    font-size: 'Spartan',sans-serif;
-    font-family: "Readex Pro", sans-serif;
+    font-family: "Zain", sans-serif;
+}
+:root{
+    --PrimaryColor:hsl(225,50%,48%);
+    --SecondaryColor:hsl(180,17%,95%);
+    --colorOne:hsl(15,74%,70%);
+    --colorTwo:hsl(28,100%,82%);
+    --HoverColor:hsl(225,56%,59%);
+    --whiteColor:hsl(0,0%,100%);
+    --blackColor:hsl(0,0%,12%);
+    --textColor:hsl(240,1%,48%);
+    --borderColor:hsl(0,0%,83%);
+    --whiteColorDeam:hsl(0,0%,93%);
 }
